--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
 </head>
 <body>
    <div class="caja1">
-
+        caja1
    </div>
    <div class="caja2">
-
+        caja2
    </div>
    <div class="caja3">
-
+        caja3
    </div>
+   <a href="#" title="My-title">Broken Link</a> <br>
+   <a href="#">Another Broken Link</a>
+   <form>
+    <input type="text" disabled>
+    <input type="text">
+   </form>
+   <button>Submit</button>
 </body>
 </html>
